src/App.css
:root {
  --main-green-color: #7f874f;
  --main-light-green-color: #9ea864;
  --main-grey-color: #404040;
  --main-light-grey-color: #666666;
  --main-brown-color: #767474;
  --main-trans-background: rgba(255,255,255,.75);
}

.App {
  text-align: center;
  height: 100vh;
  display: flex;
  flex-direction: column;
}

.page-header {
  text-align: left;
}

.home {

}

.home-content {
  align-items: center;
  border-radius: 10px;
  background-color: var(--main-trans-background);
  padding-bottom: 20px;
}

.home-content img {
  width: 45%;
  min-width: 300px;
  margin: auto;
  margin-bottom: 15px;
}

.home-salon-description {
  width: 65%;
  margin: auto;
  font-size: 1.5em;
  margin-bottom: 25px;
}

.home-content .address-block {
  text-align: center;
  flex: 1;
  margin-bottom: 0px;
  align-items: center;
}

.home-content .address-block h4 {
  margin-bottom: 0px;
  color: var(--main-light-grey-color);
}

.services {
  text-align: left;
  font-size: 16px;
  line-height: 20px;
}

.services-description {
  margin-bottom: 24px;
}

.service {
  margin-bottom: 1.5em;
}

.contact-us {

}

.address-block {
  text-align: left;
  margin-bottom: 20px;
}

.contact-us .address-block h4 {
  font-size: 18px;
}

.contact-form {
  text-align: left;
  align-items: left;
  margin-bottom: 20px;
}

.hours {
  text-align: left;
  margin-bottom: 15px;
}

.hours h4 {
  font-size: 1.25em;
  margin-bottom: 10px;
}

.navigate {
  border: 0;
  float: left;
  margin-bottom: 20px;
}

.join-team {
  float: left;
  width: 100%;
}

.job-opening {
  font-size: 16px;
  margin-bottom: 40px;
  width: 100%;
}

.job-opening-content {
  text-align: left;
  max-width: 675px;
  margin-bottom: 20px;
}

.job-opening h2 {
  font-family: 'Montserrat', 'sans-serif';
	font-weight: 700;
	line-height: 35px;
  margin-bottom: 0px;
}

.job-opening-offers {
  margin-top: 20px;
}

.green {
  color: var(--main-green-color) !important;
}

.grey {
  color: var(--main-grey-color) !important;
}

.terra-footer {
  margin-top: 0px !important;
  padding-left: 10%;
  padding-right: 10%;
  display: flex;
  flex-direction: column;
  background-color: var(--main-brown-color);
  position: static;
  bottom: 0%;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
}

.footer-socials {
  width: 100%;
  padding-top: 15px;
  margin-bottom: 1.5em;
}

.footer-social {
  display: inline;
  font-size: 18px;
  margin: 5px;
}

.footer-social a {
  color: white;
}

.footer-social a:hover {
  color: var(--main-green-color);
}

.footer-contact {
  font-size: 16px;
  margin-bottom: 30px;
}

.footer-contact-icon {
  margin-bottom: 10px;
}

.footer-contact a {
  color: white;
}

.rich-text {
  white-space: pre-line;
}

.clear-margins {
  margin: 0 0 0 0 !important;
}

.ui.menu {
  margin-bottom: 0px !important;
}

.ui.menu .navbar-logo:before {
  width: 0px !important;
}

.ui.menu .active.item:not(.navbar-icon) {
  color: var(--main-green-color) !important;
  background: none !important;
  text-decoration: underline !important;
  text-decoration-color: var(--main-grey-clor) !important;
}

.ui.menu .grey.active.item {
  color: var(--main-green-color) !important;
}

.ui.menu .green.item {
  background-color: #9fa864;
  margin-top: 6%;
  margin-bottom: 30px;
  color: white !important;
  border-radius: 8px;
}

.ui.menu .item:hover {
  color: var(--main-green-color) !important;
}

.full-width {
  width: 100%;
}

.branded-button {
  text-align: center;
	text-transform: uppercase;
	padding: 5px 20px 5px 20px;
	border-radius: 4px;
	margin: 10px;
	border: none;
	background-color: var(--main-light-green-color);
	box-shadow: none;
	text-shadow: none;
	font-weight: 400;
	vertical-align: middle;
	cursor: pointer;
	white-space: nowrap;
	font-size: 14px;
	color: #FFF;
}

.outlined-button {
  	padding: 10px;
    margin: auto;
    background-color: Transparent;
    border: 1px solid var(--main-light-green-color);
}

.outlined-button:hover {
    color: white !important;
    background-color: rgba(0,0,0,0.15);
}

.outlined-button a {
  color: var(--main-light-green-color);
  width: 100%;
  padding: 10px;
  text-decoration: none;
}

.flex-object {
  flex: 1;
}

input[type="text"],
input[type="email"],
input[type="url"],
input[type="password"],
input[type="search"],
textarea {
	color: #555;
	border: 1px solid rgba(0, 0, 0, 0.1);
	border-radius: 0;
}


/* Added for OurTeam & OurTeamList */
.our-team-list {
  position: relative;
  width: 100%;
  height: 100%;
}

.OurTeam-title {
  text-align: left;
  width: 100%;
}

.profile-icons {
  width: 100%;
  height: 100%;
  position: relative;
  overflow: visible;
  display: flex;
  flex-wrap: wrap;
  margin-left: auto;
  margin-right: auto;
  margin-top: 40px;
}

.profile-icon {
  position: relative; 
  display: inline-block;
  width: 280px;
  height: 280px;
  margin-right: 10px;
  margin-bottom: 10px;
  border: none;
  overflow: hidden;
}

.profile-icon:hover {
  opacity: .8;
}

.iconPic:hover {
  height: 300px;
  width: 300px;
}

.iconPic {
  width: 280px;
  height: 280px;
  object-fit: cover;
  transition: all .5s;
  }

.iconName {
  color: white;
  font-size: 18px;
  position: absolute;
  padding-left: 20px;
  padding-top:5px;
  padding-bottom: 4px;
  padding-right: 15px;
  bottom: 43px;
  background-color: var(--main-light-green-color);
  opacity: .9;
}

.iconTitle {
  color: white;
  font-size: 18px;
  font-size: medium;
  position: absolute;
  bottom: 10px;
  padding-bottom: 5px;
  padding-left: 20px;
  padding-right: 15px;
  padding-top: 4px;
  background-color: var(--main-light-green-color);
  opacity: .9;
}

.OurTeam-footer {
  width: 100%;
  position: relative;
  bottom: -30px;
  text-align: center;
}


@media (max-width: 947px ) {
  .profile-icons {
    display: block;
    padding-left: 0%;
  }

  .profile-icon {
    display: block;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (min-width: 948px) and (max-width: 1070px) {
  .profile-icons {
    width: 580px;
  }
}

@media (min-width: 1071px) and (max-width: 1430px) {
  .profile-icons {
    width: 870px;
  }
}

@media (min-width: 1430px) {
  .profile-icons {
    width: 1160px;
  }
}


/* Added for ProfileGrid & ProfileGridLayout */

.profileGrid-pic {
  height: 300px;
  width: 300px;
  object-fit: cover;
  float: left;
  margin-right: 20px;
  margin-bottom: 5px;
}

.profileGrid-quote { 
  text-align: left;
  font-size: 20px;
  font-style: italic;
}

.profileGrid-quoted {
  font-size: 16px;
  text-align: left;
  font-style: italic;
  margin-bottom: 20px;
}

.profileGrid-bio { 
  text-align: left;
  font-size: 16px;
}

.profileGrid-name {
  text-align: left;
  width: 100%;
}

.profileGrid-body {
  margin-top: 25px;
}

/* Added for NowHiring and Position */
.imageBox {
  display: grid;
  width: 100%;
}

.headerPhoto {
  max-width: 100%;
  margin: auto;
}

.NHtitle {
  text-align: left;
  color: #6b6d73;
}

.partUnderline {
  height: 5px;
  width: 10%;
  margin-bottom: 30px;
  background-color: #9caa63;
}

.positions {
  text-align: left;
}

.positionTitle {
  font-size: 17px;
  color: #6b6d73;
}

.jobType {
  font-size: 14px;
  font-style: italic;
  color: #6b6d73;
}

.positionDescr {
  font-style: italic;
  color: #6b6d73;
}

.terraOffers {
  font-size: 16px;
  color: #6b6d73;
}

.offers {
  line-height: 30px;
  color: #6b6d73;
}

.ourSalon {
  color: #6b6d73;
}

.footerPhotos {
  display: flex;
  flex-wrap: wrap;
  padding: 0 4px;
  overflow: hidden;
}

.picRow {
  flex: 33%;
  max-width: 33%;
  padding: 0 4px;
}

.picBM {
  padding: 4px 0 0 0;
  width: 100%;
  height: auto;
}

.picBR {
  padding: 8px 0 0 0;
  width: 100%;
  height: auto;
}

/* Navbar Mobile */
.navMobile {
  background-color: rgba(255, 248, 238, 0.74);
}

.navLogoMobile {
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 5px;
}

.iconRef {
  border: none;
  background-color: rgba(255, 248, 238, 0.74);
  outline: none;
}

.dropContent {
  display: block;
  padding-bottom: 3px;
  background-color: rgb(124, 124, 124);
}

.navServices, .ourTeam, .contactUs, .nowHiring {
  display: block;
  text-align: center;
  width: 100%;
  margin-top: 3px;
  padding-top: 3px;
  padding-bottom: 3px;
  font-size: 20px;
  color: #404040;
  background-color: #eaf2d9;
  z-index: 10;
  position: relative;
  font-family: Lato, sans-serif;
  font-weight: 400;
  text-decoration: none;
}

.nowHiring {
  background-color: #9ea864;
  color: white;
}

.navServices:link, .ourTeam:link,
 .contactUs:link, .nowHiring:link {
  text-decoration: none;
}

.navServices:active, .ourTeam:active,
 .contactUs:active, .nowHiring:active {
  color: white !important;
}

/* Navbar Desktop */
.nav-bar {
  width: 100%;
  text-align: right;
  padding-top: 20px;
  padding-bottom: 20px;
  background-color: rgba(255, 248, 238, 0.74);
}

.navLogo {
  float: left;
  margin-left: 8%;
  margin-top: -9px;
}

.rightNav {
  float: right;
}

.nav-Services, .our-Team, .contact-Us, .now-Hiring {
  margin-right: 3%;
  color: black;
  font-size: 16px;
  font-weight: 500;
}

.nav-Services:link, .our-Team:link,
 .contact-Us:link, .now-Hiring:link {
  text-decoration: none;
}

.now-Hiring {
  padding: 4px 10px 4px 10px;
  border-radius: 5px;
  background-color: #9ea864;
  color: white;
  font-size: 14px;
  font-weight: 400 !important;
}

/* Navigation on Home Page - Mobile */
.homeMenuMobile {
  display: block;
  margin: 15px 15% 0px 15%;
}

.navServices-Home, .ourTeam-Home, .contactUs-Home, .nowHiring-Home {
  display: block;
  padding: 4px 6px 4px 6px;
  background-color: #76747486;
  color: white;
  text-decoration: none;
  margin-top: 5px;
  border-radius: 5px;
}

.nowHiring-Home {
  background-color: #9ea86486 !important;
}

/* Wraps all pages */
.page {
  flex: 1;
  /* padding-top: 1em; */
  height: max-content;
  position: relative;
}

.page-content {
  position: relative;
  width: 100%;
  height: max-content;
  /* margin-top: 2%; 
  padding-left: 10%;
  padding-right: 10%;*/
  font-family: Lato, sans-serif;
  margin-bottom: 10%;
}

.margins {
  padding-top: 1em;
  margin-top: 2%;
  padding-left: 10%;
  padding-right: 10%;
}

